# game_of_life

./: Cargo.toml  Config.csv  Makefile  Readme.md  initial_state.csv
.github/workflows/: ossar.yml
src/: graph.rs  lib.rs  main.rs
