[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Florent <lab@optalysys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "glider"
path = "src/bin/glider.rs"

[[bin]]
name = "pulsar"
path = "src/bin/pulsar.rs"

[[bin]]
name = "collision"
path = "src/bin/collision.rs"
