[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Florent C. L. Michel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ggez = "0.6.0"

[[bin]]
name = "glider"
path = "src/bin/glider.rs"

[[bin]]
name = "pulsar"
path = "src/bin/pulsar.rs"

[[bin]]
name = "collision"
path = "src/bin/collision.rs"

[[bin]]
name = "collision_w"
path = "src/bin/collision_w.rs"

[[bin]]
name = "random"
path = "src/bin/random.rs"
